<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity_addList">
    <TextView
            android:id="@+id/addList_captComment"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/addList_captComment"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:gravity="bottom|left"
            android:paddingBottom="8dp"
            android:paddingLeft="18dp"
            android:background="@color/basicRed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:id="@+id/addList_captEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addList_nameHint"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"
            android:inputType="text"
            android:textColorHint="@color/lightGray"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/addList_captComment"/>
    <Button
            android:id="@+id/addList_btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/addList_btnSave"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/addList_btnShare"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:id="@+id/addList_btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/addList_btnShare"
            app:layout_constraintLeft_toRightOf="@+id/addList_btnSave"
            app:layout_constraintRight_toLeftOf="@+id/addList_btnClose"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:id="@+id/addList_btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/addList_btnClose"
            app:layout_constraintLeft_toRightOf="@+id/addList_btnShare"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <ScrollView
            android:id="@+id/addList_listView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/addList_captComment"
            app:layout_constraintBottom_toTopOf="@+id/addList_btnShare">
        <GridLayout
                android:id="@+id/addList_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="2">
            <EditText
                android:id="@+id/addList_item0"
                android:hint="@string/addList_itemHint"
                android:layout_marginLeft="8dp"
                android:layout_columnWeight="9"
                android:layout_marginRight="8dp"
                android:inputType="text"
                android:textColorHint="@color/lightGray"
                android:textColor="@color/black"
                android:backgroundTint="@color/black"/>
            <ImageButton
                android:id="@+id/addList_btnDel0"
                android:src="@drawable/app_trashbin"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_columnWeight="1"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:background="@null"
                android:tint="@drawable/btn_shad"/>
            <Button
                android:id="@+id/addList_addItem"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/addList_addItem"
                android:onClick="addList_addItem"
                android:layout_columnSpan="2"/>
        </GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>