<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:id="@+id/main_txtCapt"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/main_appCapt"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:gravity="bottom|left"
            android:padding="16dp"
            android:background="@color/basicRed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/main_logo"
            android:layout_margin="32dp"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@+id/main_txtCapt"
            app:layout_constraintBottom_toTopOf="@+id/main_btnAdd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <Button
            android:id="@+id/main_btnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/main_btnSettings"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:id="@+id/main_btnLoad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/main_btnLoadlist"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/main_btnSettings"/>
    <Button
            android:id="@+id/main_btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/main_btnAddlist"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/main_btnLoad"/>

</androidx.constraintlayout.widget.ConstraintLayout>
